Se añadieron algunos cambios sobre cotización y se agregó la utenticación en el swagger
