# Api/Servientrega/router.js
@@ -1,7 +1,8 @@
 const express = require("express");
 const { cotizar } = require("./controllers");
+const { auth } = require("../Heka/controllers");
 const router = express.Router();
 
-router.post("/Cotizar", cotizar);
+router.post("/Cotizar", auth, cotizar);
 
 module.exports = router;
