# config/swagger.json
@@ -183,7 +183,12 @@
 							}
 						}
 					}
-				}
+				},
+				"security": [
+					{
+					  "api_key": []
+					}
+				]
 			}
 		},
 		"/Api/Servientrega/Cotizar": {
@@ -227,7 +232,12 @@
 							}
 						}
 					}
-				}
+				},
+				"security": [
+					{
+					  "api_key": []
+					}
+				]
 			}
 		}
 	},
